      README.md edited online with Bitbucket
      README.md edited online with Bitbucket
      README.md edited online with Bitbucket
      README.md edited online with Bitbucket
      README.md edited online with Bitbucket
      README.md edited online with Bitbucket
      README.md edited online with Bitbucket
      README.md edited online with Bitbucket

Janj (53):
      first commit - check it out boys
      have a look at how mediators work, and soma.js in general
      Merge branch 'master' of https://bitbucket.org/mordhau/berghain2
      WE HAVE VISUAL - added preload and create world command, and ground spritesheet
      added more art and renamed classes
      added game mediator and input interface
      added basic physics (in the wrong places though, needs refactoring) and animations (ditto, needs to be abstracted from player)
      added ground state
      added state changing
      PLAYER JUMP ANIM STATE BOY
      fixed infinite jump
      added collison check with environment (floor). Env is stored in window variable, lol - should be stored in physicsmodel or something
      added physics model. removed log function in healtbar mediator. Created 'skipIntro' variable in the config file to skip the bootscreen
      updated physics model, organised the states folder
      added logo at startup. Created TODO.md file
      Merge branch 'master' of https://bitbucket.org/mordhau/berghain2
      added FTP details. removed cloud. Added logo centered to intro screen
      added burning bins
      imlemented body physics for positioning. added collision with firebin
      changed state to physics state. Also going to add an animation state - seperation of different types of states
      changed bounding box size for player body
      HEALTH BAR UPATES AND PLAYER CAN DIE BOOYAH
      added phaser cheatsheet in help folder. changed world bounds so player can fall to his death
      player health to 0 when falling off screen